function creation/script/checkweather/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: checkweather
  namespace: function
spec:
  selector:
    function: checkweather
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
