function creation/script/checkweather/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: checkweather
  namespace: function
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/enable-access-log: "true"
    nginx.ingress.kubernetes.io/enable-rewrite-log: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /function/checkweather
        pathType: Prefix
        backend:
          service:
            name: checkweather
            port:
              number: 8000
